Tests PartidaService, PartidaController y PartidaRepository